[package]
name = "yew-autocomplete"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = { version = "=0.2.83", features = ["serde-serialize"] }
yew = "0.20"
yew-commons = {path = "../yew-commons" }
web-sys = { version = "0.3", features = ["HtmlSelectElement"] }
futures = "0.3.21"

[dev-dependencies]
wasm-bindgen-test = "0.3"
wasm-bindgen-futures = "0.4"
yew = {version = "0.20", features = ["csr"]}
web-sys = { version = "0.3", features = ["HtmlSelectElement"] }


[[example]]
name = "autocomplete"
crate-type = ["cdylib"]