[package]
name = "yew-commons"
version = "0.1.0"
description = "Common code for developing yew components"
authors = ["Gabor Pihaj <me@gaborpihaj.com>"]
keywords = ["yew", "wasm", "WebAssembly"]
license = "MIT"
repository = "https://git.vdx.hu/voidcontext/yew-components"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = { version = "=0.2.83", features = ["serde-serialize"] }
yew = "0.20"

[dev-dependencies]
wasm-bindgen-test = "0.3"